tests/NormalTests/paczka1/fuzzy1/32679290.err
Error in line 30: S849 A843 22,4
Error in line 14: vJNIxt A215 28,1
Error in line 31: CtA4dXf A843 94,7
Error in line 37: vJNIxt A215 73,1
